Changelog
=========

0.1dev (unreleased)
----------------------

- Genericise the RIF-CS views for our data records and the repository to use
  the same view base.
  [David]
- Restrict rifcs view on Repository to Managers and ANDS bots only.
  [David]
- Added jpype decorator method to utils module for invoking the JVM for any
  method the decorator is applied to.
  [David]
- Provide @@rifcs view for the Repository content type so we can now output
  all records for collections (and only show one of each party and activity
  record from the repository)
  [David]
- Refactor and genericise RIF-CS rendering code and decouple the rendering
  from a specific view.
  [David]
- Allow download of RIF-CS by using ?download at the end of a RIF-CS URL.
  [David]
- Refactor lots of RIF-CS code in preparation for working with jOAI provider
  [David]
- Improvements to RIF-CS renderer, including using specific JCU keys for
  objects and providing test environment for validating RIF-CS output
  [David]
- Allowed base query sources to work with non-string searches by only applying
  the lower() function for queries to strings.  We can add additional types of
  comparison function later if required.
  [David]
- Changed Activities table source to have an integer column as the app_id
  [David]
- Allowed the overriding of reflection-mapped Columns within SQLAlcehmy
  tables within our util methods.  You can pass any number of Column objects
  into the Table() initialisation and have them override an autoload table
  (very useful!).
  [David]
- Changed query source base to allow us to sneak in and get the SQLAlchemy
  query before it returns any wrapped results.  We can now get the query
  and raw results for use within RIF-CS.
  [David]
- Added basic RIF-CS integration, using JPype.  You now need to have JPype
  present for this to all work.
  [David]
- Added invariant to check out dataset dates.
  [David]
- Update to latest version of DGF, updating our widget template and fixing